# Native-Study-Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: develop.yml
app/: __init__.py
app/common/: config.py  create_app.py
app/database/: connect.py  storage.py
app/routers/: index.py  music.py  streaming.py
app/schema/entity/: file.py  music.py
app/schema/response/: music.py
app/utils/: file.py
k8s/: app.yaml  deploy.yaml  file-server-deployment.yaml  file-server-service.yaml  file-storage-persistentvolumeclaim.yaml  mongo-deployment.yaml  mongo-service.yaml  music-service-deployment.yaml  music-service-service.yaml  service.yaml
k8s/blue-green-deploy/: blue-app.yaml  blue-green-app.yaml  blue-green-svc.yaml  green-app.yaml
k8s/canary-blue-green-deploy/: canary-app.yaml  canary-svc.yaml  stable-blue-app.yaml  stable-green-app.yaml
k8s/canary-deploy/: canary-app.yaml  canary-svc.yaml  stable-app.yaml
resource/: generate_env.py  generate_env.sh
tests/: pytest.ini
tests/api/: test_streaming.py  test_temp.py
