[tool.poetry]
name = "cnp-music-streaming"
version = "0.1.0"
description = "music streaming services"
authors = ["jungmir <ham4051@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
pre-commit = "^2.18.1"
mypy = "^0.942"
black = "^22.3.0"
autoflake = "^1.4"
isort = "^5.10.1"
fastapi = "0.75.1"
pydantic = "1.9.0"
hydra-core = "1.1.1"
uvicorn = "0.17.6"
PyAudio = "0.2.11"
python-multipart = "0.0.5"
python-dotenv = "0.20.0"
rich = "12.2.0"
pymongo = "4.1.0"
mutagen = "1.45.1"
minio = "7.1.6"

[tool.poetry.dev-dependencies]
pyinstrument = "^4.1.1"
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
pytest-watch = "^4.2.0"
pytest-parallel = "^0.1.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
